# konveyn2ai_bigquery

./: .coveragerc  .dockerignore  .env.docker.template  .env.example  .gitignore  .pre-commit-config-ci.yaml  .pre-commit-config.yaml  API_INTEGRATION.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DEMO.md  Dockerfile.amatya  Dockerfile.janapada  Dockerfile.streamlit  Dockerfile.svami  EXPLANATION.md  HACKATHON.md  Makefile  README.docker.md  README.md  README_BIGQUERY_STUDIO_SETUP.md  Research.md  TESTING.md  USER_SURVEY.txt  __init__.py  fix_integration_tests.py  hackathon_demo_results.py  issue6_visualization_notebook.ipynb  pyproject.toml  pytest.ini  requirements.txt  setup_bigquery.py  setup_env.py  simple_real_sample_test.py  test_contract_summary.py  test_credentials.py  test_final_issue4_validation.py  test_guard_fort_exceptions.py  test_guard_fort_logging.py  (+11 more)
.github/workflows/: cd-pipeline.yml  ci.yml  claude-code-review.yml  claude.yml
.memory/tasks/: task-1-project-setup.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
analytics/dashboard/: coverage_dashboard.py
analytics/sql/: compute_support_call_insights.sql  create_gap_metrics_summary_view.sql  create_progress_snapshot_table.sql  create_support_call_tables.sql  insert_progress_snapshot.sql
config/cloud-run/: amatya-role-prompter.yaml  janapada-memory.yaml  svami-orchestrator.yaml
configs/schemas/: gap_metrics_schema.json  input_contract.json  rule_schema.json
configs/sql/: gap_analysis_summary_view.sql
configs/templates/: fix_templates.yaml
deployment/configs/: cloudbuild.yaml  docker-compose.yml
deployment/scripts/: deploy-to-cloud-run.sh  monitor-services.sh  setup-artifact-registry.sh  setup-monitoring.sh  setup-service-auth.sh
deployment/tests/: generate-test-token.py  test-config.sh  test-contextual-understanding.sh  test-deployment.sh  test-docker.sh  test-error-handling.sh  test-performance.sh  test-real-integration.sh  test-response-relevance.sh  test-role-customization.sh  test-security-compliance.sh  validate-deployment.sh
docs/: DEPLOYMENT.md  GITHUB_WIF_SETUP.md  IMPORT_STANDARDS.md  LINTING_WORKFLOW.md  ac_verification_checklist.md  configuration.md  contract_stabilization_notes.md  deploy_streamlit_cloud_run.md  development-credentials.md  evaluation_logic.md  golden_samples.md  idempotency_design.md  idempotency_test_plan.md  operational_runbook.md  progress_reporting.md  regional-configuration.md  service-accounts.md  severity_rubric.md  smoke_test_plan.md  support_insight_dashboard.md  validation_checklist.md
docs/migrations/: CHANGELOG.md
examples/: README.md  enhanced_agent_manifest_demo.py  gap_analysis_widgets.py  guard_fort_demo.py  guard_fort_security_demo.py  json_rpc_server_demo.py  svami_gap_analysis_demo.ipynb
examples/cobol-copybooks/: CUSTOMER.cpy
examples/fastapi-project/: main.py
examples/irs-layouts/: individual-master-file.txt
examples/k8s-manifests/: api-service.yaml  database-statefulset.yaml  deployment.yaml  frontend-deployment.yaml  ingress.yaml  nginx-deployment.yaml  service.yaml
examples/mumps-dictionaries/: PATIENT.dic
examples/performance_templates/: cobol_template.cbl  fastapi_simple.py  fastapi_template.py  irs_template.txt  kubernetes_template.yaml  mumps_template.m
issues/: Issue#1.txt  bigquery_hack_issues.jsonl  issue#2.txt  issue#3.txt  issue#4.txt  issue#5.txt
models/: pca_reducer.pkl
pipeline/: __init__.py  embedding.py
sample-integration/strapi-indexing/: STRAPI_INDEXING_RESULTS.md  index-strapi-codebase.py  simple-strapi-indexer.py  strapi-indexing-demo.py
scripts/: README.md  compute_progress_snapshot.py  compute_support_call_insights.py  data_quality_validation.py  export_progress_report.py  ingest.py  performance_validation_v2.py  run-tests.sh  setup-github-secrets.sh  setup-simple-auth.sh  validate_tool_versions.py
specs/: issue-5-gap-analysis-functional-spec.md  issue-5-technical-design-plan.md
specs/001-bigquery-vector-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-m1-parse-and/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-bigquery-vector-embeddings/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-bigquery-memory-adapter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-gap-analysis-rules-system/: tasks.md
src/: __init__.py
src/amatya-role-prompter/: __init__.py  advisor.py  config.py  main.py  prompts.py  requirements.txt
src/api/: __init__.py  main.py  models.py  response_utils.py  schema_endpoints.py  vector_endpoints.py
src/cli/: __init__.py  commands.py  main.py
src/common/: __init__.py  agent_manifest.py  bq_writer.py  chunking.py  config.py  datetime_utils.py  ids.py  logging.py  models.py  normalize.py  parser_interfaces.py  requirements.txt  rpc_client.py  rpc_server.py
src/gap_analysis/: __init__.py  confidence_calculator.py  metrics_runner.py  rule_loader.py  rule_validator.py  semantic_candidates.py  semantic_support.py
src/guard_fort/: __init__.py  guard_fort.py  secure_demo_auth.py
src/janapada-memory/: __init__.py  main.py  requirements.txt
src/janapada_memory/: __init__.py  bigquery_connection.py  bigquery_vector_index.py  bigquery_vector_store.py  dimension_reducer.py  main.py  memory_service.py  migration_manager.py  schema_manager.py  schema_manager_stub.py  vector_store_stub.py
src/parsers/: __init__.py  irs_parser.py  mumps_parser.py
src/svami-orchestrator/: __init__.py  main.py  requirements.txt  test_endpoint.py  test_health.py  test_orchestration.py
tests/: __init__.py  conftest.py  integration_test_runner.py  test_agent_manifest.py  test_guard_fort.py  test_json_rpc_models.py  test_project_setup.py  test_rpc_client.py  test_rpc_server.py
tests/contract/: test_bigquery_embedding_schema.py  test_bigquery_vector_index_contract.py  test_cobol_parser_contract.py  test_embedding_cache_contract.py  test_embedding_pipeline_api.py  (+17 more)
(+66 files in other folders)
