[build-system]
requires = ["setuptools==45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "konveyn2ai"
version = "0.1.0"
description = "KonveyN2AI - Agentic AI Application with 3-tier architecture for hackathon"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "KonveyN2AI Team", email = "team@konveyn2ai.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"

[tool.poetry]
name = "konveyn2ai"
version = "0.1.0"
description = "KonveyN2AI - Agentic AI Application with 3-tier architecture for hackathon"
authors = ["KonveyN2AI Team <team@konveyn2ai.dev>"]
readme = "README.md"
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
google-cloud-aiplatform = ">=1.38.0"
google-generativeai = ">=0.3.0"
streamlit = ">=1.28.0"
fastapi = ">=0.104.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
numpy = ">=1.24.0"
pandas = ">=2.0.0"
python-dotenv = ">=1.0.0"
pydantic = ">=2.5.0"
requests = ">=2.31.0"
aiohttp = ">=3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
black = ">=23.0.0"
ruff = ">=0.1.0"
mypy = ">=1.7.0"

[project.urls]
Homepage = "https://github.com/neeharve/KonveyN2AI"
Repository = "https://github.com/neeharve/KonveyN2AI.git"
Issues = "https://github.com/neeharve/KonveyN2AI/issues"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
